# ShadowProbe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: vuln_signatures.json
shadowprobe/: __init__.py  __main__.py  cli.py  orchestrator.py
shadowprobe/core/: __init__.py  config.py  scanner.py  target.py
shadowprobe/modules/: __init__.py
shadowprobe/modules/discovery/: __init__.py  arp_scan.py  ping_sweep.py  tcp_discovery.py
shadowprobe/modules/fingerprint/: __init__.py  banner_grab.py  os_detect.py  version_detect.py  vuln_check.py
shadowprobe/modules/portscan/: __init__.py  service_detect.py  syn_scan.py  tcp_connect.py  udp_scan.py
shadowprobe/reporting/: __init__.py  base.py  html_report.py  json_report.py
shadowprobe/utils/: __init__.py  logger.py  network.py  validators.py
templates/: report.html
tests/: test_reports.py  test_target.py  test_validators.py
